objects/OF_AssetCases__c.object
<CustomObject>
    <description>Oggetto creato per gestire la visulizzazione di diversi clienti retail per ciascun &apos;caso&apos; a cui fa riferiemento l&apos;asset</description>
    <fields>
        <fullName>OF_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Clienti Retail</relationshipLabel>
        <relationshipName>ClientiRetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Clienti Retail</relationshipLabel>
        <relationshipName>ClientiRetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Cliente__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OF_Caso__r.AccountId, OF_NomeClienteRetail__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_NomeClienteRetail__c</fullName>
        <formula>IF(OF_Caso__r.Account.RecordType.Name=&apos;Cliente Business&apos;,OF_Caso__r.Account.Name,IF(OF_Caso__r.Account.RecordType.Name=&apos;Person Account&apos;,OF_Caso__r.Account.PersonContact.FirstName + &apos; &apos; + OF_Caso__r.Account.PersonContact.LastName,&apos; &apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Recapito_Telefonico_Cliente2__c</fullName>
        <formula>OF_Caso__r.EOF_Recapito_Telefonico_Cliente_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recapito Telefonico Cliente 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Recapito_Telefonico_Cliente_1__c</fullName>
        <formula>OF_Caso__r.EOF_Recapito_Telefonico_Cliente_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recapito Telefonico Cliente 1</label>
        <type>Text</type>
    </fields>
    <label>Cliente Retail</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>AssetCase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clienti Retail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>